--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "migration:up": "npm run build && ts-node ./node_modules/typeorm/cli -d src/config/migration.config.ts migration:run",
+    "container:migration:up": "ts-node ./node_modules/typeorm/cli -d src/config/migration.config.ts migration:run",
+    "migration:down": "ts-node ./node_modules/typeorm/cli -d src/config/migration.config.ts migration:revert",
+    "migration:create": "npm run build && ts-node ./node_modules/typeorm/cli migration:create ./src//migrations/$npm_config_name",
+    "migration:generate": "npm run build && ts-node ./node_modules/typeorm/cli -d src/config/migration.config.ts migration:generate ./src//migrations/$npm_config_name",
+    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -21,10 +27,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "dotenv": "^16.3.1",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17",
+    "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
